fix: allow overflowing of labels

--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,8 @@ body {
   --main: var(--color, #4841b0);
   height: 100%;
   overflow: auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 // We use the [class] hack to overspecify the selectors so they are more
@@ -104,7 +105,7 @@ img {
 }
 
 .f8 {
-  font-size: .65rem;
+  font-size: 0.65rem;
 }
 
 // relative stuff
@@ -137,7 +138,8 @@ img {
 
 .ais-InstantSearch__root,
 button {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .ais-SearchBox__input {
